# llm_agentic_ai_bootcamp

./: .env  ReadMe.md  adaptive_ai_tutor_gradio.ipynb  pyproject.toml
.ipynb_checkpoints/: calorie_tracker-checkpoint.ipynb  simple_api_call-checkpoint.ipynb
