[project]
name = "llm-agentic-ai-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "klejdis.jorgji",email = "klejdis.jorgji@nexgencloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.4,<5.0.0)",
    "openai (>=1.93.3,<2.0.0)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
